adicionei area habilidades

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <header class="cabecalho">
         <nav class="cabecalho-infor">
             <a href="">Home</a>
-            <a href="">Projetos</a>
-            <a href="">Tecnologias</a>
-            <a id="cabecalho-quem" href="">Quem sou eu?</a>
+            <a href="">Habilidades</a>
+            <a href="">Projetos</a>     
+   
+            <a id="contato" href="">Contato</a>
         </nav>
     </header>
     <main>
@@ -53,6 +54,19 @@
                         Baixar CV
                     </button>
                 </a>
+            </div>
+        </section>
+        <section class="area-habilidades">
+            <div class="area-tec">
+                <h2>
+                    Tecnologias
+                </h2>
+                <hr>
+                <div class="img-tec">
+                    <img src="imagens/html-5.png" alt="">
+                    <img src="imagens/css-3.png" alt="">
+                    <img src="imagens/js.png" alt="">
+                </div>
             </div>
         </section>
     </main>
