--- a/index.html
+++ b/index.html
@@ -58,15 +58,22 @@
         </section>
         <section class="area-habilidades">
             <div class="area-tec">
-                <h2>
+                <h1>
                     Tecnologias
-                </h2>
+                </h1>
                 <hr>
                 <div class="img-tec">
                     <img src="imagens/html-5.png" alt="">
                     <img src="imagens/css-3.png" alt="">
                     <img src="imagens/js.png" alt="">
                 </div>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h1>
+                    Projetos
+                </h1>
             </div>
         </section>
     </main>
