adc conteúdo na area projeto

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho-infor">
-            <a href="">Home</a>
-            <a href="">Habilidades</a>
-            <a href="">Projetos</a>     
+            <a href="#">Home</a>
+            <a href="#habilidades">Habilidades</a>
+            <a href="#projetos">Projetos</a>     
    
             <a id="contato" href="">Contato</a>
         </nav>
@@ -43,9 +43,9 @@
                 <img src="imagens/img-quem-sou-eu.png" alt="">
             </div>
             <div class="conteudo-quem-sou-eu">
-                <h2>
+                <h1>
                     Quem sou eu?
-                </h2>
+                </h1>
                 <p>
                     Me chamou Lucas e amo o mundo da tecnologia, me esforço a cada dia para ser melhor, meu primeiro contato com a programação foi em 2022 e em 2023 comecei a fazer faculdade de análise e desenvolvimento de sistema e estou desde então estudando e procurando ser bom no que faço.
                 </p>
@@ -56,7 +56,7 @@
                 </a>
             </div>
         </section>
-        <section class="area-habilidades">
+        <section class="area-habilidades" id="habilidades">
             <div class="area-tec">
                 <h1>
                     Tecnologias
@@ -69,11 +69,42 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div>
-                <h1>
-                    Projetos
-                </h1>
+        <section class="area-projetos" id="projetos">
+            <h1>
+                Projetos
+            </h1>
+            <div class="projeto-1">
+                <img src="imagens/img-cardapioweb.png" alt="">
+                <div class="conteudo-projetos">
+                    <h1>
+                        Cardápio Web
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
+                    </p>
+                </div>
+            </div>
+            <div class="projeto-2">
+                <div class="conteudo-projetos">
+                    <h1>
+                        Loading Page Nubank
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
+                    </p>
+                </div>
+                <img src="imagens/img-loading-page-nubank.png" alt="">
+            </div>
+            <div class="projeto-3">
+                <img src="imagens/img-portfolio.png" alt="">
+                <div class="conteudo-projetos">
+                    <h1>
+                        Portfólio
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
+                    </p>
+                </div>
             </div>
         </section>
     </main>
