ajustes css area projetos

--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
         <section class="area-apresentacao">
             <div class="area-rede-social">
                 <a href="#">
-                    <img src="imagens/linkedin.svg" alt="">
+                    <img src="imagens/linkedin.png" alt="">
                 </a>
                 <a href="#">
-                    <img src="imagens/instagram.svg" alt="">
-                </a>
-                <a href="#">
-                    <img src="imagens/google-mail-new.svg" alt="">
+                    <img src="imagens/github.png" alt="">
                 </a>
             </div>
             <div class="area-infor">
@@ -73,6 +70,7 @@
             <h1>
                 Projetos
             </h1>
+            <hr>
             <div class="projeto-1">
                 <img src="imagens/img-cardapioweb.png" alt="">
                 <div class="conteudo-projetos">
@@ -82,6 +80,16 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
                     </p>
+                    <a href="https://lcpires.github.io/Site-Cardapio-Calcada-Alta/" target="_blank">
+                        <button>
+                            Ver
+                        </button>
+                    </a>
+                    <a href="https://github.com/lcpires/Site-Cardapio-Calcada-Alta" target="_blank">
+                        <button>
+                            Repositório
+                        </button>
+                    </a>
                 </div>
             </div>
             <div class="projeto-2">
@@ -92,6 +100,16 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
                     </p>
+                    <a href="https://lcpires.github.io/loading-page-nubank/" target="_blank">
+                        <button>
+                            Ver
+                        </button>
+                    </a>
+                    <a href="https://github.com/lcpires/loading-page-nubank" target="_blank">
+                        <button>
+                            Repositório
+                        </button>
+                    </a>
                 </div>
                 <img src="imagens/img-loading-page-nubank.png" alt="">
             </div>
@@ -104,6 +122,16 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
                     </p>
+                    <a href="https://lcpires.github.io/Portfolio/" target="_blank">
+                        <button>
+                            Ver
+                        </button>
+                    </a>
+                    <a href="https://github.com/lcpires/Portfolio" target="_blank">
+                        <button>
+                            Repositório
+                        </button>
+                    </a>
                 </div>
             </div>
         </section>
