--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <main>
         <section class="area-apresentacao">
             <div class="area-rede-social">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/lucas-pires-460490273/" target="_blank">
                     <img src="imagens/linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://github.com/lcpires" target="_blank">
                     <img src="imagens/github.png" alt="">
                 </a>
             </div>
