--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#habilidades">Habilidades</a>
             <a href="#projetos">Projetos</a>     
    
-            <a id="contato" href="">Contato</a>
+            <a id="nav-contato" href="#contato">Contato</a>
         </nav>
     </header>
     <main>
@@ -137,7 +137,20 @@
         </section>
     </main>
     <footer>
-
+        <section class="area-contato" id="contato">
+                    <h1>
+                        Contatos
+                    </h1>
+                    <div class="img-contatos">
+                        <a href="https://www.linkedin.com/in/lucas-pires-460490273/" target="_blank"><img src="imagens/linkedin.png" alt=""></a>
+                        <a href="https://github.com/lcpires" target="_blank"><img src="imagens/github.png" alt=""></a>
+                        <a href="https://wa.me/+5592991131202" target="_blank "><img src="imagens/whatsapp.png" alt=""></a>
+                    </div>
+                    <div class="gmail-contato">            
+                        <img src="imagens/gmail.png" alt="">
+                        <p>lucasgabrielteixeirapires@gmail.com</p>
+                    </div>
+                </section>
     </footer>
 </body>
 </html>
