--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         Cardápio Web
                     </h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
+                        Cardápio Web em Desenvolvimento para um Restaurante, o princípio o objetivo é poder exibir os pratos do restaurante tendo uma visão mais concreta do que se espera consumir no local, futuramente irei colocar mais funcionalidades para a melhoria do site.
                     </p>
                     <a href="https://lcpires.github.io/Site-Cardapio-Calcada-Alta/" target="_blank">
                         <button>
@@ -98,7 +98,7 @@
                         Loading Page Nubank
                     </h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
+                        Modelo de Loading page inspirado na nubank, desenvolvido apenas com HTML5 e CSS3, o intuito desse projeto era refazer a página procurando botar em prática o que eu vinha estudando para que eu pudesse fixar melhor os conceitos de HTML5 e CSS3.
                     </p>
                     <a href="https://lcpires.github.io/loading-page-nubank/" target="_blank">
                         <button>
@@ -120,7 +120,7 @@
                         Portfólio
                     </h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laboriosam dolorem perspiciatis amet corrupti autem expedita ratione eaque perferendis aliquid, placeat ex reprehenderit, libero porro error saepe nihil ut delectus!
+                        Projeto no qual você está navegando, desenvolvido para fins pessoais e profissionais, como todos sabem é recomendado e necessário ter um portfólio, procurei desenvolver este site visando a responsividade e simplicidade entregando algo mais limpo e acessívél.
                     </p>
                     <a href="https://lcpires.github.io/Portfolio/" target="_blank">
                         <button>
