add download cv

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p>
                     Me chamou Lucas e amo o mundo da tecnologia, me esforço a cada dia para ser melhor, meu primeiro contato com a programação foi em 2022 e em 2023 comecei a fazer faculdade de análise e desenvolvimento de sistema e estou desde então estudando e procurando ser bom no que faço.
                 </p>
-                <a href="#">
+                <a href="download/currículo-lucaspires.pdf" download="currículo-lucaspires.pdf" type="application/dpf">
                     <button class="botao-cv">
                         Baixar CV
                     </button>
@@ -78,7 +78,7 @@
                         Cardápio Web
                     </h1>
                     <p>
-                        Cardápio Web em Desenvolvimento para um Restaurante, o princípio o objetivo é poder exibir os pratos do restaurante tendo uma visão mais concreta do que se espera consumir no local, futuramente irei colocar mais funcionalidades para a melhoria do site.
+                        Cardápio Web em Desenvolvimento para um Restaurante, a princípio o objetivo é poder exibir os pratos do restaurante tendo uma visão mais concreta do que se espera consumir no local, futuramente irei colocar mais funcionalidades para a melhoria do site.
                     </p>
                     <a href="https://lcpires.github.io/Site-Cardapio-Calcada-Alta/" target="_blank">
                         <button>
