--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     Quem sou eu?
                 </h1>
                 <p>
-                    Me chamo Lucas e amo o mundo da tecnologia, me esforço a cada dia para ser melhor, meu primeiro contato com a programação foi em 2022 e em 2023 comecei a fazer faculdade de análise e desenvolvimento de sistema e estou desde então estudando e procurando ser bom no que faço.
+                    Me chamo Lucas e amo o mundo da tecnologia, me esforço a cada dia para ser melhor, meu primeiro contato com a programação foi em 2022 e em 2023 comecei a fazer faculdade de Análise e Desenvolvimento de Sistema e estou desde então estudando e procurando ser bom no que faço.
                 </p>
                 <a href="download/currículo-lucaspires.pdf" download="currículo-lucaspires.pdf" type="application/dpf">
                     <button class="botao-cv">
